--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,6 +1,13 @@
 <template name="Header">
-	<header>
-		<h1>AML Leaderboard</h1>	
-	</header>
+  <head>
+    <title>AML Leaderboard</title>
+  
+    <!-- Custom CSS -->
+    <link href="css/leaderboard.css" rel="stylesheet">
+  
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <h1>Aragon Math League 2015 - 2016 Leaderboard</h1>
+  </head>
 
 </template>
