Renamed MainLayout to DisplayLayout

--- a/client/layouts/DisplayLayout.html
+++ b/client/layouts/DisplayLayout.html
@@ -1,6 +1,5 @@
 <template name="MainLayout">
 	{{> Header}}
-	{{> SideBar}}
-	{{> Leaderboard_container}}
+	{{> LeaderboardContainer}}
 </template>
 
