--- a/client/layouts/InputLayout.html
+++ b/client/layouts/InputLayout.html
@@ -1,4 +1,5 @@
-<template name="InputLayout">
-	{{> Header}}
-	{{> Leaderboard_container}}
+<template name="MainLayout">
+  {{> Header}}
+  {{> SideBar}}
+  {{> Leaderboard_container}}
 </template>
