Added input page, changed other things around, added autocomplete

--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -9,5 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <h1>Aragon Math League 2015 - 2016 Leaderboard</h1>
   </head>
-
+	<div class="container-fluid">
+    <h1>Aragon Math League 2015 - 2016 Leaderboard</h1>
+    </div>
 </template>
