--- a/client/layouts/InputLayout.html
+++ b/client/layouts/InputLayout.html
@@ -1,7 +1,8 @@
 <template name="InputLayout">
+  {{> Header}}
   <div class="container-fluid">
     <h1>Admin Area</h1>
-    <h1>Aragon Math League 2015 - 2016 Leaderboard</h1>
+    
     <p>Enter scores and such:</p>
     {{> Input}}
     <div class="row">
